<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/name"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/clock"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/clock"
                android:textSize="20sp"
                android:layout_margin="8dp"/>

            <EditText
                android:id="@+id/clockValue"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:hint="@string/clockValue"
                android:minHeight="48dp"
                android:textSize="20sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/discount"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:layout_margin="8dp"
                android:max="100"
                android:min="0"
                android:progress="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/volume" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/res_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/res_button"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_height="0dp">
        </LinearLayout>

    </LinearLayout>





</LinearLayout>